Bug 476008 - IPv6 manual addresses show not up im NM GUI
Summary: IPv6 manual addresses show not up im NM GUI
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_networkmanagement (other bugs)
Version First Reported In: unspecified
Platform: Fedora RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-10-23 15:10 UTC by Knud
Modified: 2024-12-23 18:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Knud 2023-10-23 15:10:56 UTC
SUMMARY
Entering a manual IPv6 address is possible but not visible after leaving and re-enter nm-gui

STEPS TO REPRODUCE
1. Select method "MANUAL"
2. Enter IPv6 address, Prefix, Gateway, disconect, reconnect interface
3. Leave NM-GUI and re-enter NM-GUI

OBSERVED RESULT
Address fields under IPv6 is blank but according to NMCLI IPv6 address are set.

EXPECTED RESULT


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 
Tested on Fedora 36 and 37, OPENSUSE-Tumbleweed
KDE Plasma Version: systemsettings 5.27.1
KDE Frameworks Version: 
Qt Version: 

On a old Fedora 32, KDE Plasma settings 5.18.5
It works as expected
Comment 1 Bug Janitor Service 2024-09-10 04:54:39 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/networkmanager-qt/-/merge_requests/61
Comment 2 Christoph Cullmann 2024-09-21 17:18:51 UTC
Git commit 7e04bde94e629652987fab8e51750b3b8e0b1f14 by Christoph Cullmann, on behalf of J. T. Elscott.
Committed on 21/09/2024 at 17:16.
Pushed by cullmann into branch 'master'.

Correctly read manually-specified ipv6 addresses from Networkmanager

Copy+paste mistake was checking for the presence of DNS rather than addresses
Related: bug 453453

M  +1    -1    src/settings/ipv6setting.cpp

https://invent.kde.org/frameworks/networkmanager-qt/-/commit/7e04bde94e629652987fab8e51750b3b8e0b1f14