Correctly read manually-specified ipv6 addresses from Networkmanager

Copy+paste mistake was checking for the presence of DNS rather than addresses

BUG: 476008
BUG: 453453